--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
+#list1 .form-control {
+  border-color: transparent;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#list1 .form-control:focus {
+  border-color: transparent;
+  box-shadow: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#list1 .select-input.form-control[readonly]:not([disabled]) {
+  background-color: #fbfbfb;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.titulo{
+  border-radius: .75rem; 
+  background-color: #eff1f2;
 }
